скрыл api ключ через проперти

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+api.key=Xk-WILVffFxPZNIYoosIrHWmh2mI9AQDrbCGF37LAdXtWM3Qdd
 spring.application.name=demon
 server.error.include-message=always
 server.error.include-binding-errors=always
